# python-designateclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
designateclient/: auth.py  client.py  exceptions.py  shell.py  utils.py  warlock.py
designateclient/cli/: base.py  blacklists.py  diagnostics.py  domains.py  quotas.py  records.py  reports.py  servers.py  sync.py  tlds.py  touch.py  zones.py
designateclient/functionaltests/: base.py  client.py  config.py  datagen.py  models.py
designateclient/functionaltests/v2/: fixtures.py  test_blacklist.py  test_recordsets.py  test_shared_zone.py  test_tlds.py  test_tsigkeys.py  test_zone.py  test_zone_export.py  test_zone_import.py  test_zone_transfer.py
designateclient/hacking/: checks.py
designateclient/osc/: plugin.py
designateclient/resources/schemas/v1/: record.json
designateclient/resources/schemas/v2/: blacklist.json  tld.json  zone.json
designateclient/tests/: base.py  test_designateclient.py  test_exceptions.py  test_utils.py
designateclient/tests/osc/resources/: __init__.py  recordset_create.json  recordset_list.json  recordset_list_all.json  zone_create.json  zone_list.json
designateclient/tests/osc/v2/: test_recordsets.py  test_tlds.py  test_zone.py
designateclient/tests/test_v1/: __init__.py  test_client.py  test_domain.py  test_quotas.py  test_reports.py  test_servers.py
designateclient/tests/v2/: __init__.py  test_blacklists.py  test_client.py  test_limits.py  test_nameservers.py  test_quotas.py  test_recordsets.py  test_reverse.py  test_service_statuses.py  test_timeout.py  test_tlds.py  test_tsigkeys.py  test_zones.py
designateclient/v1/: __init__.py  base.py  diagnostics.py  domains.py  quotas.py  records.py  reports.py  servers.py  sync.py  touch.py
designateclient/v2/: __init__.py  base.py  blacklists.py  client.py  limits.py  nameservers.py  quotas.py  recordsets.py  reverse.py  service_statuses.py  tlds.py  tsigkeys.py  utils.py  zones.py
designateclient/v2/cli/: blacklists.py  common.py  limits.py  quotas.py  recordsets.py  reverse.py  service_statuses.py  tlds.py  tsigkeys.py  zones.py
doc/: requirements.txt
doc/examples/: recordset_create.py  recordset_crud.py  zone_create_primary.py  zone_create_secondary.py  zone_list_nameservers.py  zone_list_paging.py
doc/source/: api-examples.rst  api.rst  bindings.rst  conf.py  contributing.rst  functional-tests.rst  index.rst  installation.rst  shell-examples.rst  shell-v2-examples.rst  shell-v2.rst  shell.rst
doc/source/cli/: index.rst
doc/source/contributor/: contributing.rst  index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: bindings.rst  index.rst  shell-examples.rst  shell-v2.rst  shell.rst
monikerclient/: auth.py  exceptions.py  shell.py  utils.py  version.py  warlock.py
monikerclient/cli/: base.py  diagnostics.py  domains.py  records.py  reports.py  servers.py
monikerclient/resources/schemas/v1/: domain.json  record.json  server.json
monikerclient/v1/: __init__.py  base.py  client.py  diagnostics.py  domains.py  records.py  reports.py  servers.py
releasenotes/notes/: Add-shared-zones-support-4be565f3d1c6356c.yaml  add-hard-delete-option-for-zone-delete-e16652c8e72fc023.yaml  bug-1927892-a3f8c4e2b7d91065.yaml  bug-1940544-9ed7805341dec1ba.yaml  bug-1978713-1e1f6d9a991c2c4f.yaml  bug-2131519-zone-task-pagination-7e4a2b91c3d80f56.yaml  dns-limit-list-command-b5fabebf76e7e8eb.yaml  drop-py2-c4e50d006fa4446c.yaml  quota-commands-7ff037bddae95771.yaml  remove-api-v1-4e507128b344082b.yaml  remove-records-argument-8eda058e3bf028ca.yaml  zone-create-command-email-is-optional-bug-2143824-71b816f91ce045b1.yaml  zone-import-attributes-1166c129d39186db.yaml  zone-nameservers-list-command-60b986968d714b2b.yaml
releasenotes/source/: conf.py  index.rst
tools/: pip-requires  test-requires
