[metadata]
name = python-designateclient
summary = DNS as a Service - Client
description-file =
    README.rst
author = Kiall Mac Innes
author-email = kiall@managedit.ie
home-page = https://launchpad.net/python-designateclientclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    designateclient
scripts =
    bin/designate

[entry_points]
designateclient.v1.controllers =
    reports = designateclient.v1.reports:ReportsController
    diagnostics = designateclient.v1.diagnostics:DiagnosticsController
    domains = designateclient.v1.domains:DomainsController
    records = designateclient.v1.records:RecordsController
    servers = designateclient.v1.servers:ServersController
    sync = designateclient.v1.sync:SyncController
    touch = designateclient.v1.touch:TouchController

designateclient.cli =
    domain-list = designateclient.cli.domains:ListDomainsCommand
    domain-get = designateclient.cli.domains:GetDomainCommand
    domain-create = designateclient.cli.domains:CreateDomainCommand
    domain-update = designateclient.cli.domains:UpdateDomainCommand
    domain-delete = designateclient.cli.domains:DeleteDomainCommand
    domain-servers-list = designateclient.cli.domains:ListDomainServersCommand

    record-list = designateclient.cli.records:ListRecordsCommand
    record-get = designateclient.cli.records:GetRecordCommand
    record-create = designateclient.cli.records:CreateRecordCommand
    record-update = designateclient.cli.records:UpdateRecordCommand
    record-delete = designateclient.cli.records:DeleteRecordCommand

    server-list = designateclient.cli.servers:ListServersCommand
    server-get = designateclient.cli.servers:GetServerCommand
    server-create = designateclient.cli.servers:CreateServerCommand
    server-update = designateclient.cli.servers:UpdateServerCommand
    server-delete = designateclient.cli.servers:DeleteServerCommand

    diagnostics-ping = designateclient.cli.diagnostics:PingCommand

    sync-all = designateclient.cli.sync:SyncAllCommand
    sync-domain = designateclient.cli.sync:SyncDomainCommand
    sync-record = designateclient.cli.sync:SyncRecordCommand

    touch-domain = designateclient.cli.touch:TouchDomainCommand

    report-count-all = designateclient.cli.reports:CountsCommand
    report-count-domains = designateclient.cli.reports:DomainCountCommand
    report-count-records = designateclient.cli.reports:RecordCountCommand
    report-count-tenants = designateclient.cli.reports:TenantCountCommand
    report-tenants-all = designateclient.cli.reports:TenantsCommand
    report-tenant-domains = designateclient.cli.reports:TenantCommand

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designateclient/locale
domain = designateclient

[update_catalog]
domain = designateclient
output_dir = designateclient/locale
input_file = designateclient/locale/designateclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designateclient/locale/designateclient.pot

[wheel]
universal = 1
