[metadata]
name = python-designateclient
summary = OpenStack DNS-as-a-Service - Client
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-designateclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    designateclient
scripts =
    bin/designate

[entry_points]
designateclient.v1.controllers =
    reports = designateclient.v1.reports:ReportsController
    diagnostics = designateclient.v1.diagnostics:DiagnosticsController
    domains = designateclient.v1.domains:DomainsController
    records = designateclient.v1.records:RecordsController
    servers = designateclient.v1.servers:ServersController
    quotas = designateclient.v1.quotas:QuotasController
    sync = designateclient.v1.sync:SyncController
    touch = designateclient.v1.touch:TouchController

designateclient.cli =
    domain-list = designateclient.cli.domains:ListDomainsCommand
    domain-get = designateclient.cli.domains:GetDomainCommand
    domain-create = designateclient.cli.domains:CreateDomainCommand
    domain-update = designateclient.cli.domains:UpdateDomainCommand
    domain-delete = designateclient.cli.domains:DeleteDomainCommand
    domain-servers-list = designateclient.cli.domains:ListDomainServersCommand

    record-list = designateclient.cli.records:ListRecordsCommand
    record-get = designateclient.cli.records:GetRecordCommand
    record-create = designateclient.cli.records:CreateRecordCommand
    record-update = designateclient.cli.records:UpdateRecordCommand
    record-delete = designateclient.cli.records:DeleteRecordCommand

    server-list = designateclient.cli.servers:ListServersCommand
    server-get = designateclient.cli.servers:GetServerCommand
    server-create = designateclient.cli.servers:CreateServerCommand
    server-update = designateclient.cli.servers:UpdateServerCommand
    server-delete = designateclient.cli.servers:DeleteServerCommand

    diagnostics-ping = designateclient.cli.diagnostics:PingCommand

    sync-all = designateclient.cli.sync:SyncAllCommand
    sync-domain = designateclient.cli.sync:SyncDomainCommand
    sync-record = designateclient.cli.sync:SyncRecordCommand

    touch-domain = designateclient.cli.touch:TouchDomainCommand

    report-count-all = designateclient.cli.reports:CountsCommand
    report-count-domains = designateclient.cli.reports:DomainCountCommand
    report-count-records = designateclient.cli.reports:RecordCountCommand
    report-count-tenants = designateclient.cli.reports:TenantCountCommand
    report-tenants-all = designateclient.cli.reports:TenantsCommand
    report-tenant-domains = designateclient.cli.reports:TenantCommand

    quota-get = designateclient.cli.quotas:GetQuotaCommand
    quota-update = designateclient.cli.quotas:UpdateQuotaCommand
    quota-reset = designateclient.cli.quotas:ResetQuotaCommand

designateclient.versions =
    1 = designateclient.v1:Client
    2 = designateclient.v2.client:Client

openstack.cli.extension =
    dns = designateclient.osc.plugin

openstack.dns.v2 =
    zone_blacklist_create = designateclient.v2.cli.blacklists:CreateBlacklistCommand
    zone_blacklist_list = designateclient.v2.cli.blacklists:ListBlacklistsCommand
    zone_blacklist_show = designateclient.v2.cli.blacklists:ShowBlacklistCommand
    zone_blacklist_set = designateclient.v2.cli.blacklists:SetBlacklistCommand
    zone_blacklist_delete = designateclient.v2.cli.blacklists:DeleteBlacklistCommand

    tld_create = designateclient.v2.cli.tlds:CreateTLDCommand
    tld_list = designateclient.v2.cli.tlds:ListTLDsCommand
    tld_show = designateclient.v2.cli.tlds:ShowTLDCommand
    tld_set = designateclient.v2.cli.tlds:SetTLDCommand
    tld_delete = designateclient.v2.cli.tlds:DeleteTLDCommand

    zone_create = designateclient.v2.cli.zones:CreateZoneCommand
    zone_list = designateclient.v2.cli.zones:ListZonesCommand
    zone_show = designateclient.v2.cli.zones:ShowZoneCommand
    zone_set = designateclient.v2.cli.zones:SetZoneCommand
    zone_delete = designateclient.v2.cli.zones:DeleteZoneCommand

    zone_abandon = designateclient.v2.cli.zones:AbandonZoneCommand
    zone_axfr = designateclient.v2.cli.zones:AXFRZoneCommand

    zone_export_create = designateclient.v2.cli.zones:ExportZoneCommand
    zone_export_list = designateclient.v2.cli.zones:ListZoneExportsCommand
    zone_export_show = designateclient.v2.cli.zones:ShowZoneExportCommand
    zone_export_delete = designateclient.v2.cli.zones:DeleteZoneExportCommand
    zone_export_showfile = designateclient.v2.cli.zones:ShowZoneExportFileCommand

    zone_import_create = designateclient.v2.cli.zones:ImportZoneCommand
    zone_import_list = designateclient.v2.cli.zones:ListZoneImportsCommand
    zone_import_show = designateclient.v2.cli.zones:ShowZoneImportCommand
    zone_import_delete = designateclient.v2.cli.zones:DeleteZoneImportCommand

    zone_transfer_request_create = designateclient.v2.cli.zones:CreateTransferRequestCommand
    zone_transfer_request_list = designateclient.v2.cli.zones:ListTransferRequestsCommand
    zone_transfer_request_show = designateclient.v2.cli.zones:ShowTransferRequestCommand
    zone_transfer_request_set = designateclient.v2.cli.zones:SetTransferRequestCommand
    zone_transfer_request_delete = designateclient.v2.cli.zones:DeleteTransferRequestCommand
    zone_transfer_accept_request = designateclient.v2.cli.zones:AcceptTransferRequestCommand
    zone_transfer_accept_list = designateclient.v2.cli.zones:ListTransferAcceptsCommand
    zone_transfer_accept_show = designateclient.v2.cli.zones:ShowTransferAcceptCommand

    recordset_create = designateclient.v2.cli.recordsets:CreateRecordSetCommand
    recordset_list = designateclient.v2.cli.recordsets:ListRecordSetsCommand
    recordset_show = designateclient.v2.cli.recordsets:ShowRecordSetCommand
    recordset_set = designateclient.v2.cli.recordsets:SetRecordSetCommand
    recordset_delete = designateclient.v2.cli.recordsets:DeleteRecordSetCommand

    ptr_record_list = designateclient.v2.cli.reverse:ListFloatingIPCommand
    ptr_record_show = designateclient.v2.cli.reverse:ShowFloatingIPCommand
    ptr_record_set = designateclient.v2.cli.reverse:SetFloatingIPCommand
    ptr_record_unset = designateclient.v2.cli.reverse:UnsetFloatingIPCommand

    dns_service_list = designateclient.v2.cli.service_statuses:ListServiceStatusesCommand
    dns_service_show = designateclient.v2.cli.service_statuses:ShowServiceStatusCommand

    dns_quota_list = designateclient.v2.cli.quotas:ListQuotasCommand
    dns_quota_set = designateclient.v2.cli.quotas:SetQuotasCommand
    dns_quota_reset = designateclient.v2.cli.quotas:ResetQuotasCommand

    tsigkey_create = designateclient.v2.cli.tsigkeys:CreateTSIGKeyCommand
    tsigkey_list = designateclient.v2.cli.tsigkeys:ListTSIGKeysCommand
    tsigkey_show = designateclient.v2.cli.tsigkeys:ShowTSIGKeyCommand
    tsigkey_set = designateclient.v2.cli.tsigkeys:SetTSIGKeyCommand
    tsigkey_delete = designateclient.v2.cli.tsigkeys:DeleteTSIGKeyCommand


[build_sphinx]
builders = html,man
all-files = 1
warning-is-error = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designateclient/locale
domain = designateclient

[update_catalog]
domain = designateclient
output_dir = designateclient/locale
input_file = designateclient/locale/designateclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designateclient/locale/designateclient.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
