[metadata]
name = python-designateclient
description = OpenStack DNS-as-a-Service - Client
long_description = file: README.rst
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/python-designateclient/latest
python_requires = >=3.8
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: Name Service (DNS)

[files]
packages =
    designateclient

[entry_points]
designateclient.versions =
    2 = designateclient.v2.client:Client

openstack.cli.extension =
    dns = designateclient.osc.plugin

openstack.dns.v2 =
    zone_blacklist_create = designateclient.v2.cli.blacklists:CreateBlacklistCommand
    zone_blacklist_list = designateclient.v2.cli.blacklists:ListBlacklistsCommand
    zone_blacklist_show = designateclient.v2.cli.blacklists:ShowBlacklistCommand
    zone_blacklist_set = designateclient.v2.cli.blacklists:SetBlacklistCommand
    zone_blacklist_delete = designateclient.v2.cli.blacklists:DeleteBlacklistCommand

    tld_create = designateclient.v2.cli.tlds:CreateTLDCommand
    tld_list = designateclient.v2.cli.tlds:ListTLDsCommand
    tld_show = designateclient.v2.cli.tlds:ShowTLDCommand
    tld_set = designateclient.v2.cli.tlds:SetTLDCommand
    tld_delete = designateclient.v2.cli.tlds:DeleteTLDCommand

    zone_create = designateclient.v2.cli.zones:CreateZoneCommand
    zone_list = designateclient.v2.cli.zones:ListZonesCommand
    zone_show = designateclient.v2.cli.zones:ShowZoneCommand
    zone_set = designateclient.v2.cli.zones:SetZoneCommand
    zone_delete = designateclient.v2.cli.zones:DeleteZoneCommand

    zone_abandon = designateclient.v2.cli.zones:AbandonZoneCommand
    zone_axfr = designateclient.v2.cli.zones:AXFRZoneCommand

    zone_export_create = designateclient.v2.cli.zones:ExportZoneCommand
    zone_export_list = designateclient.v2.cli.zones:ListZoneExportsCommand
    zone_export_show = designateclient.v2.cli.zones:ShowZoneExportCommand
    zone_export_delete = designateclient.v2.cli.zones:DeleteZoneExportCommand
    zone_export_showfile = designateclient.v2.cli.zones:ShowZoneExportFileCommand

    zone_import_create = designateclient.v2.cli.zones:ImportZoneCommand
    zone_import_list = designateclient.v2.cli.zones:ListZoneImportsCommand
    zone_import_show = designateclient.v2.cli.zones:ShowZoneImportCommand
    zone_import_delete = designateclient.v2.cli.zones:DeleteZoneImportCommand

    zone_transfer_request_create = designateclient.v2.cli.zones:CreateTransferRequestCommand
    zone_transfer_request_list = designateclient.v2.cli.zones:ListTransferRequestsCommand
    zone_transfer_request_show = designateclient.v2.cli.zones:ShowTransferRequestCommand
    zone_transfer_request_set = designateclient.v2.cli.zones:SetTransferRequestCommand
    zone_transfer_request_delete = designateclient.v2.cli.zones:DeleteTransferRequestCommand
    zone_transfer_accept_request = designateclient.v2.cli.zones:AcceptTransferRequestCommand
    zone_transfer_accept_list = designateclient.v2.cli.zones:ListTransferAcceptsCommand
    zone_transfer_accept_show = designateclient.v2.cli.zones:ShowTransferAcceptCommand

    zone_share_create = designateclient.v2.cli.zones:ShareZoneCommand
    zone_share_list = designateclient.v2.cli.zones:ListSharedZonesCommand
    zone_share_show = designateclient.v2.cli.zones:ShowSharedZoneCommand
    zone_share_delete = designateclient.v2.cli.zones:DeleteSharedZoneCommand

    recordset_create = designateclient.v2.cli.recordsets:CreateRecordSetCommand
    recordset_list = designateclient.v2.cli.recordsets:ListRecordSetsCommand
    recordset_show = designateclient.v2.cli.recordsets:ShowRecordSetCommand
    recordset_set = designateclient.v2.cli.recordsets:SetRecordSetCommand
    recordset_delete = designateclient.v2.cli.recordsets:DeleteRecordSetCommand

    ptr_record_list = designateclient.v2.cli.reverse:ListFloatingIPCommand
    ptr_record_show = designateclient.v2.cli.reverse:ShowFloatingIPCommand
    ptr_record_set = designateclient.v2.cli.reverse:SetFloatingIPCommand
    ptr_record_unset = designateclient.v2.cli.reverse:UnsetFloatingIPCommand

    dns_service_list = designateclient.v2.cli.service_statuses:ListServiceStatusesCommand
    dns_service_show = designateclient.v2.cli.service_statuses:ShowServiceStatusCommand

    dns_quota_list = designateclient.v2.cli.quotas:ListQuotasCommand
    dns_quota_set = designateclient.v2.cli.quotas:SetQuotasCommand
    dns_quota_reset = designateclient.v2.cli.quotas:ResetQuotasCommand

    tsigkey_create = designateclient.v2.cli.tsigkeys:CreateTSIGKeyCommand
    tsigkey_list = designateclient.v2.cli.tsigkeys:ListTSIGKeysCommand
    tsigkey_show = designateclient.v2.cli.tsigkeys:ShowTSIGKeyCommand
    tsigkey_set = designateclient.v2.cli.tsigkeys:SetTSIGKeyCommand
    tsigkey_delete = designateclient.v2.cli.tsigkeys:DeleteTSIGKeyCommand
